--- a/test/fixtures/parts.yml
+++ b/test/fixtures/parts.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  appointment_date: 2021-12-30 11:30:52
+  part_number: MyString
 
 two:
-  appointment_date: 2021-12-30 11:30:52
+  part_number: MyString
